# BRTLibrary

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
Base/: BRTManager.cpp  BRTManager.h  BRTManager.hpp  BaseClasses.hpp  Command.hpp  EntryPoint.hpp  EntryPoint2.hpp  EntryPointPtr.hpp  ExitPoint.h  ExitPoint.hpp  ExitPointPtr.hpp  Listener.hpp  ObserverBase.hpp  ProcessorBase.hpp  SoundSource.h  SoundSource.hpp
BinauralSpatializer/: UPCAnechoic.cpp  UPCAnechoic.h
Common/: Buffer.h  CommonDefinitions.h  EarsTransform.hpp  ErrorHandler.cpp  ErrorHandler.h  FiltersChain.hpp  Fprocessor.cpp  Fprocessor.h  GlobalParameters.hpp  Quaternion.cpp  Quaternion.h  Transform.cpp  UPCAnechoic.cpp  UPCAnechoic.h  Vector3.h  fftsg.hpp
ProcessingModules/: BinauralConvolverProcessor.hpp  DistanceAttenuation.hpp  DistanceAttenuationProcessor.hpp  HRTFConvolver.hpp  HRTFConvolverProcessor.hpp  MultipleInputProcessor.hpp  NearFieldEffect.hpp  NearFieldEffectProcessor.hpp  SingleBinauralProcessor.hpp  SingleProcessor.hpp
Readers/: HRTFSOFAReader.hpp  ILDSOFAReader.hpp  SofaReader.hpp
ServiceModules/: HRTF.cpp  HRTF.h  ILD.hpp
include/: BRTLibrary.h
include/Base/: AdvancedEntryPointManager.hpp  BRTConnectivity.hpp  BRTManager.hpp  Command.hpp  CommandEntryPointManager.hpp  EntryPoint.hpp  EntryPointManager.hpp  EntryPointPtr.hpp  EnvironmentModelBase.hpp  ExitPoint.hpp  ExitPointManager.hpp  ExitPointPtr.hpp  Listener.hpp  ListenerBase.hpp  ListenerModelBase.hpp  ModelBase.hpp  ObserverBase.hpp  ProcessorBase.hpp  SoundSource.hpp  SourceModelBase.hpp
include/BilateralFilter/: SOSBilateralFilter.hpp
include/BilateralFilterModels/: BilateralFilterModelBase.hpp  FIRBilateralFilterModel.hpp  SOSBilateralFilterModel.hpp
include/BinauralFilter/: BilateralFilterBase.hpp  BinauralFilterBase.hpp  SOSBilateralFilter.hpp  SOSBinauralFilter.hpp
include/Common/: AddDelayExpansionMethod.hpp  AmbisonicEncoder.hpp  AudioMixer.hpp  AudioState.h  BinauralFilter.hpp  BiquadFilter.hpp  Buffer.h  Buffer.hpp  CascadeGraphicEq9OctaveBands.hpp  CommonDefinitions.h  CommonDefinitions.hpp  Conventions.hpp  CranicalGeometry.hpp  DistanceAttenuator.hpp  EarsTransform.hpp  EnvelopeDetector.hpp  ErrorHandler.hpp  FFTCalculator.hpp  FiltersChain.hpp  Fprocessor.hpp  GlobalParameters.hpp  IRWindowing.hpp  Profiler.hpp  Quaternion.hpp  RMSCalculator.hpp  Room.hpp  SourceListenerRelativePositionCalculation.hpp  Transform.h  Transform.hpp  UPCAnechoic.h  UPCAnechoic.hpp  UniformPartitionedConvolution.hpp  Vector3.cpp  Vector3.hpp  Wall.hpp  Waveguide.hpp
include/Connectivity/: AdvancedEntryPointManager.hpp  BRTConnectivity.hpp  Command.hpp  CommandEntryPointManager.hpp  CommandList.hpp  EntryPoint.hpp  EntryPointManager.hpp  ExitPoint.hpp  ExitPointManager.hpp  ObserverBase.hpp
include/EnvironmentModels/: EnvironmentModelBase.hpp  EnvironmentVirtualSourcesModel.hpp  EnvironmentVirtualSourcesSDNModel.hpp  ExampleEnvironment.hpp  ExampleEnvironmentModel.hpp  FreeFieldEnvironmentModel.hpp  ISMEnvironmentModel.hpp  SDNEnvironmentModel.hpp  VirtualSourceList.hpp
include/EnvironmentModels/ISMEnvironment/: ISMEnvironment.hpp  (+3 more)
include/Filters/: CascadeGraphicEq9OctaveBands.hpp  FIRFilter.hpp  FilterBase.hpp  SOSFilter.hpp  SpatiallyOrientedSOSFilter.hpp
include/ListenerModels/: ListenerAmbisonicEnvironmentBRIRModel.hpp  ListenerAmbisonicHRTFModel.hpp  ListenerAmbisonicReverberantVirtualLoudspeakersModel.hpp  ListenerAmbisonicVirtualLoudspeakersModel.hpp  ListenerDirectBRIRConvolution.hpp  ListenerDirectHRTFConvolution.hpp  ListenerEnvironmentBRIRModel.hpp  ListenerHRTFModel.hpp  ListenerHRTFbasedModel.hpp  ListenerModelBase.hpp  ListenerVirtualAmbisonicBasedModel.hpp
include/ProcessingModules/: AmbisonicDomainConvolver.hpp  AmbisonicDomainConvolverProcessor.hpp  AmbisonicEncoder.hpp  BilateralAmbisonicEncoder.hpp  BilateralAmbisonicEncoderProcessor.hpp  BinauralFilter.hpp  BiquadFilter.hpp  BiquadFilterChain.hpp  DirectivityConvolver.hpp  DirectivityTFConvolver.hpp  DistanceAttenuation.hpp  DistanceAttenuationProcessor.hpp  DistanceAttenuator.hpp  DistanceAttenuatorProcessor.hpp  FIRConvolver.hpp  HRTFConvolver.hpp  HRTFConvolverProcessor.hpp  MultichannelBiquadFilterChain.hpp  NearFieldEffect.hpp  NearFieldEffectProcessor.hpp  SRTFConvolver.hpp  SRTFConvolverProcessor.hpp  SingleBinauralProcessor.hpp  SingleProcessor.hpp  UniformPartitionedConvolution.hpp
include/Readers/: HRTFSOFAReader.hpp  LibMySofaLoader.hpp  OBJReader.hpp  SofaReader.hpp
include/ServiceModules/: AmbisonicBIR.hpp  AmbisonicIR.hpp  DirectivityTF.hpp  DirectivityTFAuxiliarMethods.hpp  DirectivityTFDefinitions.hpp  Extrapolation.hpp  FIRTableAuxiliarMethods.hpp  GeneralFIR.hpp  GridsManager.hpp  HRBRIR.hpp  HRBRIR.hpp.delete  HRTF.cpp  HRTF.h  HRTF.hpp  HRTFAuxiliarMethods.hpp  HRTFDefinitions.hpp  HRTFTester.hpp  ILD.hpp  InterpolationAuxiliarMethods.hpp  KDTree.hpp  NFCFilters.hpp  OfflineInterpolation.hpp  OfflineInterpolationAuxiliarMethods.hpp  OnlineInterpolation.hpp  Preprocessor.hpp  Room.hpp  SOSCoefficients.hpp  SOSFilters.hpp  SRTF.hpp  ServiceModuleInterfaces.hpp  ServicesBase.hpp  SphericalFIRTable.hpp  SphericalFIRTableDefinitions.hpp  SphericalInterpolatedFIRTable.hpp  SphericalSOSTable.hpp  SphericalSearchKDTree.hpp  VirtualSpeakers.hpp  Wall.hpp
include/SourceModels/: SourceDirectivityModel.hpp  SourceModelBase.hpp  SourceOmnidirectionalModel.hpp  SourceSimpleModel.hpp  VirtualSourceModel.hpp
src/: Fprocessor.cpp  Vector3.cpp
test/: test.cpp
(+23 files in other folders)
